--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+
+
 cmake_minimum_required(VERSION 3.13)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
@@ -15,6 +17,9 @@ add_executable(${PROJECT_NAME}
         lib/ssd1306.c # Biblioteca para o display OLED
         )
 
+# Generate PIO header
+pico_generate_pio_header(Teste_Voltimetro ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio)
+
 target_compile_definitions(${PROJECT_NAME} PRIVATE 
         PICO_PRINTF_SUPPORT_FLOAT=1 
         PICO_STDIO_ENABLE_PRINTF=1
@@ -24,6 +29,7 @@ target_link_libraries(${PROJECT_NAME}
         pico_stdlib 
         hardware_i2c
         hardware_adc
+        hardware_pio
         )
 
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
